unpackaged/main/default/objects/Plant_Event__c/Plant_Event__c.object-meta.xml
<CustomObject>
    <label>Plant Event</label>
    <nameField>
        <displayFormat>PE-{000000}</displayFormat>
        <label>Plant Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plant Events</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>