unpackaged/main/default/objects/Plant_Event__c/fields/AM_PM__c.field-meta.xml
<CustomField>
    <fullName>AM_PM__c</fullName>
    <formula>IF( (FLOOR ( MOD(  CreatedDate  - ($System.OriginDateTime),1) *24))&lt;=11, "AM", "PM")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM/PM</label>
    <type>Text</type>
</CustomField>