unpackaged/main/default/objects/Plant_Event__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End date of a program that is only open certain times of the year</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>