unpackaged/main/default/objects/Plant_Event__c/fields/Include_Boxed_Lunches__c.field-meta.xml
<CustomField>
    <fullName>Include_Boxed_Lunches__c</fullName>
    <defaultValue>false</defaultValue>
    <description>At Makers Mark the restaurant is closed Monday and Tuesday so visitors can indicate if they would want boxed lunches if there trip falls on one of those days.</description>
    <inlineHelpText>At Makers Mark the restaurant is closed Monday and Tuesday so visitors can indicate if they would want boxed lunches if there trip falls on one of those days.</inlineHelpText>
    <label>Include Boxed Lunches</label>
    <type>Checkbox</type>
</CustomField>