unpackaged/main/default/objects/Plant_Event__c/fields/Initiator__c.field-meta.xml
<CustomField>
    <fullName>Initiator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The person who created the event</description>
    <label>Initiator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Plant_Events</relationshipName>
    <type>Lookup</type>
</CustomField>