unpackaged/main/default/objects/Plant_Event__c/fields/Initiator_Phone__c.field-meta.xml
<CustomField>
    <fullName>Initiator_Phone__c</fullName>
    <formula>Initiator__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initiator Phone</label>
    <type>Text</type>
</CustomField>