unpackaged/main/default/objects/Plant_Event__c/fields/isBottling__c.field-meta.xml
<CustomField>
    <fullName>isBottling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isBottling</label>
    <type>Checkbox</type>
</CustomField>