unpackaged/main/default/objects/Plant_Event__c/fields/Location_Of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Location_Of_Visit__c</fullName>
    <formula>IF( (ISPICKVAL( Time_Slot__c , "Cellar - 9 AM")) || (ISPICKVAL(Time_Slot__c , "Cellar - 12 PM") ) , "Cellar" , "Lake" )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Of Visit</label>
    <type>Text</type>
</CustomField>