unpackaged/main/default/objects/Plant_Event__c/fields/Time_Interval__c.field-meta.xml
<CustomField>
    <fullName>Time_Interval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Time Interval</label>
    <referenceTo>Time_Interval__c</referenceTo>
    <relationshipLabel>Plant Events</relationshipLabel>
    <relationshipName>Plant_Events</relationshipName>
    <type>Lookup</type>
</CustomField>