unpackaged/main/default/objects/Plant_Event__c/fields/Tour__c.field-meta.xml
<CustomField>
    <fullName>Tour__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this event will be a private tour</description>
    <label>Tour</label>
    <type>Checkbox</type>
</CustomField>