unpackaged/main/default/objects/Plant_Event__c/recordTypes/El_Tesoro.recordType-meta.xml
<RecordType>
    <fullName>El_Tesoro</fullName>
    <active>true</active>
    <label>El Tesoro</label>
</RecordType>