unpackaged/main/default/objects/Plant_Event__c/recordTypes/Makers_Mark.recordType-meta.xml
<RecordType>
    <fullName>Makers_Mark</fullName>
    <active>true</active>
    <label>Makers Mark</label>
</RecordType>