unpackaged/main/default/objects/Plant_Event__c/listViews/El_Tesoro.listView-meta.xml
<ListView>
    <fullName>El_Tesoro</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Time_of_Day__c</columns>
    <columns>Initiator__c</columns>
    <columns>Number_of_Attendees__c</columns>
    <columns>Tour__c</columns>
    <columns>Scheduled_Date__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Brand__c</field>
        <operation>equals</operation>
        <value>El Tesoro</value>
    </filters>
    <label>El Tesoro</label>
    <language>en_US</language>
    <sharedTo>
        <group>CS_Employees</group>
        <group>El_Tesoro_Single_Barrel</group>
    </sharedTo>
</ListView>