unpackaged/main/default/objects/Plant_Event__c/listViews/Knob_Creek.listView-meta.xml
<ListView>
    <fullName>Knob_Creek</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Time_of_Day__c</columns>
    <columns>Initiator__c</columns>
    <columns>Number_of_Attendees__c</columns>
    <columns>Tour__c</columns>
    <columns>Scheduled_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Brand__c</field>
        <operation>equals</operation>
        <value>Knob Creek</value>
    </filters>
    <label>Knob Creek</label>
    <language>en_US</language>
    <sharedTo>
        <group>CS_Employees</group>
        <group>Knob_Creek_Single_Barrel</group>
    </sharedTo>
</ListView>