unpackaged/main/default/objects/Plant_Event__c/listViews/Makers_Mark.listView-meta.xml
<ListView>
    <fullName>Makers_Mark</fullName>
    <columns>NAME</columns>
    <columns>Scheduled_Date__c</columns>
    <columns>Time_of_Day__c</columns>
    <columns>Number_of_Attendees__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Brand__c</field>
        <operation>equals</operation>
        <value>Makers Mark</value>
    </filters>
    <label>Makers Mark</label>
    <language>en_US</language>
</ListView>